--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -4,6 +4,7 @@
 @color-gray: #d9d9d9;
 @color-gray-light: #f2f2f2;
 @color-gray-dark: #444444;
+@color-gray-deep: #222222;
 @color-green: #68b738;
 @color-green-dark: #5eaa2f;
 
