--- a/src/less/blocks/card.less
+++ b/src/less/blocks/card.less
@@ -2,6 +2,37 @@
   padding-top: 18px;
   padding-bottom: 24px;
   border-bottom: 1px solid @color-gray-silver;
+
+  @media @tablet {
+    border: none;
+    min-height: 511px;
+    display: flex;
+    align-items: flex-end;
+    padding-top: 8px;
+    padding-bottom: 40px;
+    background: linear-gradient(
+      @color-white 0,
+      @color-white 81px,
+      @color-gray-light 81px,
+      @color-gray-light 100%
+    );
+  }
+}
+
+.card__wrapper {
+  margin: 0 auto;
+  width: 320px;
+  padding: 0 20px;
+
+  @media @tablet {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media @desktop {
+  }
 }
 
 .card__inner {
@@ -9,6 +40,12 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+
+  @media @tablet {
+    width: 324px;
+    flex-direction: column;
+    margin-bottom: 34px;
+  }
 }
 
 .card__picture {
@@ -16,16 +53,36 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media @tablet {
+    margin-bottom: 34px;
+    width: auto;
+  }
+}
+
+.card__table {
+  border-spacing: 0;
+
+  @media @tablet {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & tr th {
+      vertical-align: center;
+    }
+  }
 }
 
 .card__box {
   width: 142px;
   display: flex;
   justify-content: space-between;
-}
 
-.card__table {
-  border-spacing: 0;
+  @media @tablet {
+    width: 247px;
+    border-bottom: 1px solid @color-gray;
+  }
 }
 
 .card__title {
@@ -35,6 +92,14 @@
   text-transform: uppercase;
   color: @color-gray-deep;
   margin-bottom: 18px;
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 24px;
+    width: 156px;
+    text-align: center;
+    margin-bottom: 14px;
+  }
 }
 
 .card__description {
@@ -42,4 +107,14 @@
   line-height: 16px;
   font-weight: 400;
   padding: 0;
+
+  @media @tablet {
+    font-size: 16px;
+    padding-top: 6px;
+    padding-bottom: 9px;
+  }
+}
+
+.card__button {
+  min-height: 40px;
 }
