--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -1,5 +1,16 @@
 .cards__list {
   list-style: none;
+  width: auto;
+  max-width: none;
   padding: 0;
   margin: 0;
+
+  @media @tablet {
+    display: flex;
+    //flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 60px;
+    max-width: 768px;
+    padding: 0 30px;
+  }
 }
