--- a/src/less/blocks/catalog.less
+++ b/src/less/blocks/catalog.less
@@ -1,8 +1,5 @@
 .catalog__title {
   .title(36px, 36px);
-  padding-top: 28px;
-  padding-bottom: 40px;
-
   @media @tablet {
     font-size: 60px;
     line-height: 60px;
@@ -10,6 +7,14 @@
 }
 
 .catalog__header {
+  padding-top: 28px;
+  padding-bottom: 40px;
   border-top: 1px solid @color-gray;
   border-bottom: 1px solid @color-gray-silver;
+
+  @media @tablet {
+    border: none;
+    padding-top: 60px;
+    padding-bottom: 76px;
+  }
 }
