--- a/src/less/blocks/card.less
+++ b/src/less/blocks/card.less
@@ -5,10 +5,6 @@
 
   @media @tablet {
     padding: 8px 36px 40px;
-    //display: flex;
-    //flex-direction: column;
-    //align-items: center;
-    //justify-content: flex-end;
     width: 324px;
     min-height: 511px;
     background: linear-gradient(
@@ -20,19 +16,16 @@
   }
 
   @media @desktop {
+    width: 245px;
   }
 }
 
 .card__inner {
   display: flex;
   justify-content: space-between;
-  //align-items: center;
-  //margin-bottom: 20px;
   margin-bottom: 13px;
 
   @media @tablet {
-    //width: 324px;
-    //flex-direction: column;
     margin-bottom: 34px;
     display: block;
   }
@@ -42,10 +35,6 @@
   flex-grow: 2;
   padding-top: 14px;
   padding-bottom: 12px;
-  //width: 138px;
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
 
   & img {
     margin: 0 auto;
@@ -60,7 +49,7 @@
     margin-bottom: 34px;
     padding-top: 28px;
     padding-bottom: 0;
-    //width: auto;
+
     &--big {
       padding: 0;
     }
@@ -68,15 +57,9 @@
 }
 
 .card__table {
-  //border-spacing: 0;
-  //border-collapse: collapse;
-  //border: none;
   width: 142px;
 
   @media @tablet {
-    //display: flex;
-    //flex-direction: column;
-    //align-items: center;
     width: 100%;
   }
 }
@@ -132,4 +115,8 @@
   padding: 10px;
   margin: 0 auto;
   display: block;
+
+  @media @desktop {
+    width: 168px;
+  }
 }
