--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -7,11 +7,14 @@
 
   @media @tablet {
     display: flex;
-    //flex-wrap: wrap;
     justify-content: space-between;
     gap: 60px;
     max-width: 768px;
     padding: 0 30px;
+  }
+
+  @media @desktop {
+    max-width: 1280px;
   }
 }
 
