--- a/src/less/blocks/show-more.less
+++ b/src/less/blocks/show-more.less
@@ -15,20 +15,40 @@
 }
 
 .show-more__inner {
+  position: relative;
   margin-bottom: 6px;
-  padding: 5px 20px 15px;
+  padding: 57px 20px 15px;
+
+  &::before {
+    position: absolute;
+    content: '';
+    height: 30px;
+    width: 30px;
+    background-image: url('../../img/plus-icon.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 6px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
   @media @tablet {
-    margin-bottom: 66px;
-    padding: 5px 40px 15px;
+    margin-bottom: 72px;
+    padding: 112px 40px 15px;
+
+    &::before {
+      width: 60px;
+      height: 60px;
+      background-size: 100%;
+    }
   }
 
   @media @desktop {
-    padding: 4px 0 15px;
+    padding: 112px 0 15px;
   }
 }
 
-.card__icon {
+.show-more__icon {
   height: 30px;
   width: 30px;
   margin: 0 auto 23px;
@@ -56,7 +76,7 @@
     font-size: 20px;
     line-height: 24px;
     text-align: center;
-    margin: 0 auto 17px;
+    margin: 0 auto 23px;
   }
 }
 
@@ -71,8 +91,6 @@
 
   @media @tablet {
     font-size: 16px;
-    padding-top: 6px;
-    padding-bottom: 6px;
     margin: 0 auto;
   }
 }
@@ -85,6 +103,10 @@
   display: block;
   color: @color-gray-dark;
   background-color: @color-gray-light;
+
+  @media @tablet {
+    min-height: 40px;
+  }
 
   @media @desktop {
     width: 168px;
